feat() complete ready to QA

--- a/FE/public/assets/css/theme.css
+++ b/FE/public/assets/css/theme.css
@@ -2735,7 +2735,7 @@ footer .widget ul li a:hover{
     top: 0;
     width: 100%;
     height: 150px;
-    background: #fd7c54;
+    background: linear-gradient(to right, #ed09fe, #04a7fd);
     -webkit-clip-path: polygon(300% 0, 0 0, 0 100%);
     -moz-clip-path: polygon(300% 0, 0 0, 0 100%);
     clip-path: polygon(300% 0, 0 0, 0 100%);
