--- a/FE/src/App.css
+++ b/FE/src/App.css
@@ -12,3 +12,21 @@
   font-size: 18px;
   font-weight: bold;
 }
+
+.video-container {
+  position: relative;
+  width: 100%;
+}
+
+.aspect-ratio-container {
+  position: relative;
+  padding-top: 56.25%; /* 16:9 aspect ratio */
+}
+
+.responsive-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
