--- a/FE/public/assets/css/responsive.css
+++ b/FE/public/assets/css/responsive.css
@@ -427,6 +427,7 @@
     top: 100%;
     width: 100%;
     background: #fff;
+    color: #5d5a67;
     border-radius: 0;
     z-index: 99;
     -webkit-box-shadow: 0px 6px 10px 0px rgba(11, 02, 55, 0.06);
@@ -442,6 +443,7 @@
   }
   .navbar-expand-lg .navbar-nav li {
     margin: 0;
+    color: #5d5a67 !important;
     border-bottom: 1px solid rgba(35, 47, 62, 0.07);
   }
   .navbar-expand-lg .navbar-nav li:last-child {
