--- a/FE/src/App.css
+++ b/FE/src/App.css
@@ -30,3 +30,19 @@
   width: 100%;
   height: 100%;
 }
+@media (max-width: 700px) {
+  .about-widget img {
+    width: 100px;
+  }
+  .maina {
+    flex-direction: column !important;
+  }
+
+  .mais,
+  .title-ra {
+    width: 100% !important;
+  }
+  .adka {
+    margin-top: 10px;
+  }
+}
